# Myrio

./: .gitignore  Cargo.toml  README.md  grid_search_optimization_results.md  justfile  rustfmt.toml
myrio-cli/: Cargo.toml  build.rs
myrio-cli/src/: main.rs
myrio-cli/src/app/: cli.rs  config.rs  config_default.toml  mod.rs
myrio-cli/src/app/process/: misc.rs  mod.rs  run.rs  tree.rs
myrio-core/: Cargo.toml  README.md
myrio-core/src/: clustering.rs  constants.rs  lib.rs  prelude.rs  similarity.rs  utils.rs
myrio-core/src/clustering/: mod.rs  simfunc.rs
myrio-core/src/data/: mod.rs  myrseq.rs  sparse.rs
myrio-core/src/io/: mod.rs
myrio-core/src/simseq/: distr.rs  mod.rs
myrio-core/src/simseq/distr/: func.rs  mod.rs  nbin.rs  poisson.rs
myrio-core/src/tax/: clade.rs  compute.rs  core.rs  display.rs  mod.rs  results.rs  store.rs  tree.rs
myrio-exp/: Cargo.toml
myrio-exp/benches/: bench.rs  kmer_counts.rs  misc.rs  simfunc.rs
myrio-exp/src/: lib.rs  main.rs  misc.rs  simfunc.rs  simseq.rs
myrio-exp/src/clustering/: hierarchical.rs  mod.rs  optim.rs  partition.rs  sparse.rs  testing.rs
myrio-exp/src/scripts/: clustering.rs  gridsearchoptim.rs  mod.rs  testset.rs
myrio-exp/src/simseq/: constants.rs  mod.rs
myrio-exp/src/simseq/distr/: func.rs  mod.rs  poisson.rs
myrio-exp/src/tax/: mod.rs
myrio-proc/: Cargo.toml
myrio-proc/src/: lib.rs
myrio-py/: data.csv  db_gen.py  notebook.py  requirements.txt
