[package]
name = "myrio-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
# internal
myrio-core = { workspace = true }
# external
anyhow = { workspace = true }
clap = { version = "4.5" }
console = { workspace = true}
directories = { version = "6.0" }
ijson = { version = "0.1" }
indicatif = { workspace = true, features = ["rayon"] }
itertools = { workspace = true }
rand = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[build-dependencies]
clap = { version = "4.5" }
clap_complete = { version = "4.5" }

[[bin]]
name = "myrio"
path = "src/main.rs"
