[package]
name = "myrio-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
# internal
myrio-core = { workspace = true }
# external
anyhow = { workspace = true }
clap = { version = "4.5" }
console = { workspace = true}
directories = { version = "6.0" }
indicatif = { workspace = true, features = ["rayon"] }
indoc = { version = "2.0" }
itertools = { workspace = true }
rand = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.9" }

[build-dependencies]
clap = { version = "4.5" }
clap_complete = { version = "4.5" }

[[bin]]
name = "myrio"
path = "src/main.rs"
