[package]
name = "myrio-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
# internal
myrio-proc = { workspace = true }
# external
bio = { workspace = true }
bio-seq = { workspace = true }
bincode = { version = "2.0" }
bytemuck = { version = "1.23" }
flate2 = { version = "1.1" }
itertools = { workspace = true }
# As the `argmin` crate currently only supports `ndarray` 0.15
# Upgrade once development is mostly done
# ndarray = { version = "0.16" }
# ndarray-stats = { version = "0.6.0" }
ndarray = { version = "0.15" }
ndarray-stats = { version = "0.5.0" }
rand = { workspace = true }
thiserror = { version = "2.0" }
zstd = { version = "0.13" }

[dev-dependencies]
indoc = { version = "2.0" }
