[package]
name = "myrio-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
# internal
myrio-proc = { workspace = true }
# external
bio-seq = { workspace = true }
bincode = { version = "2.0" }
bytemuck = { version = "1.23" }
flate2 = { version = "1.1" }
itertools = { workspace = true }
ndarray = { workspace = true }
ndarray-stats = { version = "0.6.0" }
# As the `argmin` crate currently only supports `ndarray` 0.15
#ndarray = { version = "0.15" }
#ndarray-stats = { version = "0.5.0" }
nutype = { version = "0.6" }
once_cell = { version = "1.21" }
rand = { workspace = true }
rayon = { workspace = true }
regex = { version = "1.11" }
thiserror = { version = "2.0" }
zstd = { version = "0.13" }
# optional
indicatif = { version = "0.18", features = ["rayon"], optional = true }

[features]
default = ["indicatif"]
indicatif = ["dep:indicatif"]

[dev-dependencies]
indoc = { version = "2.0" }
