[package]
name = "myrio-exp"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme = "README.md"
default-run = "myrio-exp"

[dependencies]
# internal
myrio-core = { workspace = true }
# external
anyhow = { workspace = true }
argmin = { version = "0.10", features = ["rayon"] }
bio = { workspace = true }
bio-seq = { workspace = true }
bytemuck = { version = "1.23" }
itertools = { workspace = true }
ndarray = { version = "0.16" }
rand = { version = "0.9" }
rand_distr = { version = "0.5" }

[[bin]]
name = "myrio-exp"
path = "src/main.rs"
