[package]
name = "myrio-exp"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme = "README.md"
default-run = "myrio-exp"

[dependencies]
# internal
myrio-core = { workspace = true }
# external
anyhow = { workspace = true }
#argmin = { version = "0.10", features = ["ctrlc"] }
#argmin-math = { version = "0.4", features = ["ndarray_v0_15-nolinalg"] }
bio = { workspace = true }
bio-seq = { workspace = true }
bytemuck = { version = "1.23" }
itertools = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
rayon = { version = "1.10" }

[dev-dependencies]
divan = { version = "0.1" }

[[bin]]
name = "myrio-exp"
path = "src/main.rs"

[[bench]]
name = "bench"
harness = false
